2004-07-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/parse.c (cleanup_udvlist): Fix memory leak; if udv structure
	is freed, free its dynamically allocated name also.

	* src/plot3d.c: Remove unnecessary #include "plot2d.h".

2004-07-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util.h (os_error, int_error, int_warn, graph_error):
	Reverted change to prototypes for non-ANSI case back from (void)
	to ().

	* src/fit.c (Dblfn): Likewise.

2004-07-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_bars plot_betweencurves): If the current
	terminal does not support filled_polygons, then fall back to
	yerrorbars plot style as per the documentation.

2004-07-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/post.trm (PS_make_header): Moved prototype into PM3D-only
	section.

2004-07-21  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add labelplot.pdb and nearmap.csv to
	Makefile.am target.

2004-07-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot): Write the key titles using 
	write_multiline() rather than calling term->put_text() directly.

	* src/set.c (set_key): Fix order-dependence of 'set key' command.

2004-07-18  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Update "Creator: " field to report version 4.1

	* term/post.trm: Petr's optimized format for solid pm3d quadrangles
	can be generated even outside the pm3d code, so the \h macro it uses
	must be defined in the header regardless of whether pm3d is in use.

2004-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_filled_polygon): Remove extraneous gsave
	introduced by previous patch, which fixes the observed slowdown.

2004-07-16  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_filled_polygon): The polygon fill code was
	mis-nesting gsave/grestore pairs, leading to several rather odd
	results. Fixes bug #992565 and also the loss of color information